fixed padding on iphone5

--- a/app/public/wp-content/themes/vedyoga/css/single.css
+++ b/app/public/wp-content/themes/vedyoga/css/single.css
@@ -210,7 +210,8 @@
     .page-banner .page-banner__content .page-banner__title {
       font-size: 2.5rem;
       color: #ffffff;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      text-align: center; }
     .page-banner .page-banner__content .page-banner__intro {
       color: #ffffff;
       font-size: 1.5rem;
