--- a/app/public/wp-content/themes/vedyoga/sass/page.scss
+++ b/app/public/wp-content/themes/vedyoga/sass/page.scss
@@ -44,6 +44,7 @@ $page-banner__intro--color:$page-banner__title--color;
       font-size: 2.5rem;
       color: $page-banner__title--color;
       margin-bottom: 10px;
+      text-align: center;
     }
     .page-banner__intro{
       color: $page-banner__intro--color;
