--- a/app/public/wp-content/themes/vedyoga/style.css
+++ b/app/public/wp-content/themes/vedyoga/style.css
@@ -884,7 +884,8 @@
     .page-banner .page-banner__content .page-banner__title {
       font-size: 2.5rem;
       color: #ffffff;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      text-align: center; }
     .page-banner .page-banner__content .page-banner__intro {
       color: #ffffff;
       font-size: 1.5rem;
@@ -1117,7 +1118,8 @@
     .page-banner .page-banner__content .page-banner__title {
       font-size: 2.5rem;
       color: #ffffff;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      text-align: center; }
     .page-banner .page-banner__content .page-banner__intro {
       color: #ffffff;
       font-size: 1.5rem;
@@ -1685,7 +1687,8 @@
     .page-banner .page-banner__content .page-banner__title {
       font-size: 2.5rem;
       color: #ffffff;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      text-align: center; }
     .page-banner .page-banner__content .page-banner__intro {
       color: #ffffff;
       font-size: 1.5rem;
@@ -2110,3 +2113,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-start; } }
+
+@media (max-width: 370px) {
+  .blog-page-wrapper .blog-main-wrapper.side-paddings {
+    padding: 0; } }
